[package]
name = "auction-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
hex = "0.4.2"
chrono = "0.4.24"
postgres = "0.19.4"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
serde_json = "1.0.94"
scraper = "0.15.0"